--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,8 @@
     "stop_token": "cpp",
     "streambuf": "cpp",
     "thread": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "cstring": "cpp",
+    "sstream": "cpp"
   }
 }
